--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "profile.png"
   name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Mathematics and Computer Science Student"
+  location         : "New York"
+  employer         : "Syracuse University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "dopascua@syr.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
