--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "David's Homepage"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://davidopascual.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "davidopascual/davidpascual.github.io"
 
@@ -22,7 +22,7 @@ repository               : "davidopascual/davidpascual.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "David Pascual"
   pronouns         : # example: "she/her"  
   bio              : "Mathematics and Computer Science Student"
   location         : "New York"
@@ -44,7 +44,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "davidopascual"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "david-o-pascual"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
