--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "davidopascual/davidpascual.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "1716336211197.jpeg"
   name             : "David Pascual"
   pronouns         : # example: "she/her"  
   bio              : "Mathematics and Computer Science Student"
